[package]
name = "hello"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
libbpf-rs = { path = "../../../libbpf-rs/libbpf-rs" }
libc = "0.2"

[build-dependencies]
libbpf-cargo = { path = "../../../libbpf-rs/libbpf-cargo" }
